@@ -1,3 +1,8 @@
+2018-08-25  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/86545
+	* gfortran.dg/generic_35.f90: New test case.
+
 2018-08-24  David Malcolm  <dmalcolm@redhat.com>
 
 	PR 87091
